fix: memberlist footer overlapping

--- a/web/src/components/member/members-list/MembersList.css
+++ b/web/src/components/member/members-list/MembersList.css
@@ -1,6 +1,7 @@
 .memberList{
-    padding-top: 75px;
+padding: 75px 0;
 }
+
 
 .memberContainer {
     display: flex;
